# gameservers-dashboard

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main.py
app/api/: __init__.py  router.py
app/kubernetes/: __init__.py  client.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: base.html  error.html  game.html  index.html
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
